# security_monitor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  baseline.example.json  pyproject.toml  pytest_final.txt  requirements.txt  security_check.py  security_log.json  setup.ps1  task.txt  test_v230.py
.github/workflows/: ci.yml
tests/: test_security_check.py
