[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "security-monitor"
version = "2.3.0"
description = "Enterprise-grade daily security monitor for Windows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["psutil", "keyring"]

[project.scripts]
security-monitor = "security_check:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
